Revert "Revert "feat: 팀 겹치지 않도록 수정""
This reverts commit 34de3b0a55a71381c3258bd64be40f32deabc821.